--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "keywords": [
-    "webmentions" 
+    "webmentions"
   ],
   "author": "Michael Walter Van Der Velden <mikevdv@vandie.co.uk> (https://mikevdv.dev)",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
     "jest": "^28.1.2",
     "rollup": "^2.75.7",
     "ts-jest": "^28.0.5",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "microformats-parser": "^1.4.1"
+    "microformats-parser": "^1.4.1",
+    "node-html-parser": "^5.3.3"
   }
 }
