--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "test": "jest"
+    "test": "jest",
+    "setup:hooks": "husky install"
   },
   "keywords": [
     "webmentions"
@@ -17,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.1",
+    "husky": "^8.0.1",
     "jest": "^28.1.2",
     "rollup": "^2.75.7",
     "ts-jest": "^28.0.5",
