--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "A handler for web mentions",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": "https://github.com/vandie/webmention-handler",
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "setup:hooks": "husky install"
+    "setup:hooks": "husky install",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "webmentions",
