--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test Suite
+name: Release Module
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: 16.x
+        node-version: [16.x]
   
     steps:
       - uses: actions/checkout@v3
