--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --collectCoverageFrom='[\"src/**/*.{js,ts}\"]'",
     "setup:hooks": "husky install",
     "prepublish": "npm run build"
   },
