--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webmention-handler",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "A handler for web mentions",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --collectCoverageFrom='[\"src/**/*.{js,ts}\"]'",
     "setup:hooks": "husky install",
     "prepublish": "npm run build"
   },
