--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     name: Release
+    needs: test
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: google-github-actions/release-please-action@v3
