--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
         name: Release Please
         id: release
         with:
-          release-type: node
-          package-name: webmention-handler
-          path: /
+          command: manifest
       # The logic below handles the npm publication:
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
